bugfix and lib updates